# secops

./: .editorconfig  .envrc  .gitignore  Jenkinsfile  LICENSE  README.md  galaxy.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: github-actions-demo.yml
jobdsl/: job.groovy
playbooks/: secops-aux.yml  secops.yml
playbooks/files/: replace_grub_option.py
roles/aide/tasks/: aide_debian_conf.yml  aide_redhat_conf.yml  main.yml
roles/aide/vars/: main.yml
roles/apparmor/tasks/: main.yml
roles/auditd/files/: replace_grub_option.py
roles/auditd/tasks/: main.yml
roles/auditd/vars/: main.yml
roles/clamav/tasks/: clamav-daemon.yml  freshclam.yml  main.yml
roles/clamav/vars/: main.yml
roles/dict_to_ini/tasks/: main.yml
roles/fail2ban/tasks/: main.yml
roles/fail2ban/vars/: main.yml
roles/git/tasks/: main.yml
roles/modsecurity/tasks/: main.yml
roles/modsecurity/vars/: main.yml
roles/nmap/tasks/: main.yml
roles/openvas/tasks/: main.yml
roles/osquery/tasks/: main.yml
roles/osquery/vars/: main.yml
roles/ossec-hids/tasks/: main.yml
roles/ossec-hids/vars/: main.yml
roles/ossechids/tasks/: main.yml
roles/rkhunter/tasks/: main.yml
roles/rkhunter/vars/: main.yml
roles/rsyslog/tasks/: main.yml
roles/rsyslog/templates/: 60-ansible-default.conf.j2
roles/rsyslog/vars/: main.yml
roles/snort/tasks/: main.yml
roles/snort/vars/: main.yml
roles/splunkforwarder/tasks/: main.yml
roles/splunkforwarder/vars/: main.yml
roles/syslogng/tasks/: main.yml
scripts/: virtualenv.sh
(+3 files in other folders)
